# AliNA

./: .gitignore  LICENSE  README.md  fold.py  help.txt  setup.cfg
alina/: __init__.py  api.py  fold.py
alina/model/: __init__.py  config.py  model.py
alina/utils/: FastaHandler.py  __init__.py  dictionary.py  outprocess.py  preprocess.py  validation.py
data/: AllData750_OneInFamily.newick  CloseTest750_200fams.fasta  PseudoBase.fasta  PseudoKnots750_889structs.fasta  README.md  RNAcentral256_Tree750FamFiltered_04-01_ss.fasta  Train750.fasta  UnseenTest750_245fams.fasta  Valid750_200fams.fasta  WithinTest750_1500structs.fasta
model/: Att256Emb16_7-4_18k_l3_val_acc.ckpt.index  model.py
tests/: fasta.fasta  test_api.py  test_cli.py
utils/: dictionary.py  input_process.py  output_process.py  predictor.py
