[metadata]
name = alina
version = 1.0.0
author = Artem Mukanov
url = https://github.com/Arty40m/AliNA
description = RNA secondary structure prediction algorithm
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe=False,
include_package_data = True
packages = find:
python_requires = >= 3.8
install_requires =
    numpy>=1.18
    importlib_resources;python_version<'3.9'
    
[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
    alina = alina.fold:main
